5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1764_1576.log
== SUBMITION (2019-05-28 15:44:06) 
-- CODE:
from numpy import *
eusapia=array(eval(input('digite as jogadas de Eurapia:  ')))
barsanulfo=array(eval(input('digite as jogadas de Barsanulfo:  ')))
i=0
b_vence=0
e_vence=0
empate=0
while(i < len(eusapia)):
	if(barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo(i)==22 and eusapia(i)==11) or (barsanulfo[i]==33 and eusapia(i)==22))):
		b_vence= b_vence +1
		
	elif(barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo(i)==22 and eusapia(i)==33) or (barsanulfo[i]==33 and eusapia(i)==11))):
		e_vence= e_vence +1
	else:
		empate=empate +1
	i=i+1
print(len(barsanulfo))
if(b_vence>e_vence):
	print("barsanulfo")
elif (e_vence>b_vence):
	print("eusapia")
else:
	print('empate')

	
p	
		

-- EXECUTION TIME:
0.154153
-- ERROR:
  File "/home/codebench/codes/1764/1576/main.py", line 9
    if(barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo(i)==22 and eusapia(i)==11) or (barsanulfo[i]==33 and eusapia(i)==22))):
                                                                                                                                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:44:13) 
-- CODE:
from numpy import *
eusapia=array(eval(input('digite as jogadas de Eurapia:  ')))
barsanulfo=array(eval(input('digite as jogadas de Barsanulfo:  ')))
i=0
b_vence=0
e_vence=0
empate=0
while(i < len(eusapia)):
	if(barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo(i)==22 and eusapia(i)==11) or (barsanulfo[i]==33 and eusapia(i)==22))):
		b_vence= b_vence +1
		
	elif(barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo(i)==22 and eusapia(i)==33) or (barsanulfo[i]==33 and eusapia(i)==11))):
		e_vence= e_vence +1
	else:
		empate=empate +1
	i=i+1
print(len(barsanulfo))
if(b_vence>e_vence):
	print("barsanulfo")
elif (e_vence>b_vence):
	print("eusapia")
else:
	print('empate')

	
p	
		

-- ERROR:
File "XXXX", line 9
    if(barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo(i)==22 and eusapia(i)==11) or (barsanulfo[i]==33 and eusapia(i)==22))):
                                                                                                                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:45:43) 
-- CODE:
from numpy import *
eusapia=array(eval(input('digite as jogadas de Eurapia:  ')))
barsanulfo=array(eval(input('digite as jogadas de Barsanulfo:  ')))
i=0
b_vence=0
e_vence=0
empate=0
while(i < len(eusapia)):
	if (barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo(i)==22 and eusapia(i)==11) or (barsanulfo[i]==33 and eusapia(i)==22):
		b_vence= b_vence +1
		
	elif(barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo(i)==22 and eusapia(i)==33) or (barsanulfo[i]==33 and eusapia(i)==11))):
		e_vence= e_vence +1
	else:
		empate=empate +1
	i=i+1
print(len(barsanulfo))
if(b_vence>e_vence):
	print("barsanulfo")
elif (e_vence>b_vence):
	print("eusapia")
else:
	print('empate')

	
p	
		

-- ERROR:
File "XXXX", line 12
    elif(barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo(i)==22 and eusapia(i)==33) or (barsanulfo[i]==33 and eusapia(i)==11))):
                                                                                                                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:46:04) 
-- CODE:
from numpy import *
eusapia=array(eval(input('digite as jogadas de Eurapia:  ')))
barsanulfo=array(eval(input('digite as jogadas de Barsanulfo:  ')))
i=0
b_vence=0
e_vence=0
empate=0
while(i < len(eusapia)):
	if (barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo(i)==22 and eusapia(i)==11) or (barsanulfo[i]==33 and eusapia(i)==22):
		b_vence= b_vence +1
		
	elif (barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo(i)==22 and eusapia(i)==33) or (barsanulfo[i]==33 and eusapia(i)==11):
		e_vence= e_vence +1
	else:
		empate=empate +1
	i=i+1
print(len(barsanulfo))
if(b_vence>e_vence):
	print("barsanulfo")
elif (e_vence>b_vence):
	print("eusapia")
else:
	print('empate')

	
p	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:46:28) 
-- CODE:
from numpy import *
eusapia=array(eval(input('digite as jogadas de Eurapia:  ')))
barsanulfo=array(eval(input('digite as jogadas de Barsanulfo:  ')))
i=0
b_vence=0
e_vence=0
empate=0
while(i < len(eusapia)):
	if (barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo(i)==22 and eusapia(i)==11) or (barsanulfo[i]==33 and eusapia(i)==22):
		b_vence= b_vence +1
		
	elif (barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo(i)==22 and eusapia(i)==33) or (barsanulfo[i]==33 and eusapia(i)==11):
		e_vence= e_vence +1
	else:
		empate=empate +1
	i=i+1
print(len(barsanulfo))
if(b_vence>e_vence):
	print("barsanulfo")
elif (e_vence>b_vence):
	print("eusapia")
else:
	print('empate')

	
p	
		

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:47:35) 
-- CODE:
from numpy import *
eusapia=array(eval(input('digite as jogadas de Eurapia:  ')))
barsanulfo=array(eval(input('digite as jogadas de Barsanulfo:  ')))
i=0
b_vence=0
e_vence=0
empate=0
while(i < len(eusapia)):
	if (barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo(i)==22 and eusapia(i)==11) or (barsanulfo[i]==33 and eusapia(i)==22):
		b_vence= b_vence +1
		
	elif (barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo(i)==22 and eusapia(i)==33) or (barsanulfo[i]==33 and eusapia(i)==11):
		e_vence= e_vence +1
	else:
		empate=empate +1
	i=i+1
print(len(barsanulfo))
if(b_vence>e_vence):
	print("barsanulfo")
elif (e_vence>b_vence):
	print("eusapia")
else:
	print('empate')

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:49:13) 
-- CODE:
from numpy import *
eusapia=array(eval(input('digite as jogadas de Eurapia:  ')))
barsanulfo=array(eval(input('digite as jogadas de Barsanulfo:  ')))
i=0
b_vence=0
e_vence=0
empate=0
while(i < len(eusapia)):
	if (barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo[i]==22 and eusapia[i]==11) or (barsanulfo[i]==33 and eusapia[i]==22):
		b_vence= b_vence +1
		
	elif (barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo[i]==22 and eusapia[i]==33) or (barsanulfo[i]==33 and eusapia[i]==11):
		e_vence= e_vence +1
	else:
		empate=empate +1
	i=i+1
print(len(barsanulfo))
if(b_vence>e_vence):
	print("barsanulfo")
elif (e_vence>b_vence):
	print("eusapia")
else:
	print('empate')

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 15:49:31) 
-- CODE:
from numpy import *
eusapia=array(eval(input('digite as jogadas de Eurapia:  ')))
barsanulfo=array(eval(input('digite as jogadas de Barsanulfo:  ')))
i=0
b_vence=0
e_vence=0
empate=0
while(i < len(eusapia)):
	if (barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo[i]==22 and eusapia[i]==11) or (barsanulfo[i]==33 and eusapia[i]==22):
		b_vence= b_vence +1
		
	elif (barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo[i]==22 and eusapia[i]==33) or (barsanulfo[i]==33 and eusapia[i]==11):
		e_vence= e_vence +1
	else:
		empate=empate +1
	i=i+1
print(len(barsanulfo))
if(b_vence>e_vence):
	print("barsanulfo")
elif (e_vence>b_vence):
	print("eusapia")
else:
	print('empate')

	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:49:59) 
-- CODE:
from numpy import *
eusapia=array(eval(input('digite as jogadas de Eurapia:  ')))
barsanulfo=array(eval(input('digite as jogadas de Barsanulfo:  ')))
i=0
b_vence=0
e_vence=0
empate=0
while(i < len(eusapia)):
	if (barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo[i]==22 and eusapia[i]==11) or (barsanulfo[i]==33 and eusapia[i]==22):
		b_vence= b_vence +1
		
	elif (barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo[i]==22 and eusapia[i]==33) or (barsanulfo[i]==33 and eusapia[i]==11):
		e_vence= e_vence +1
	else:
		empate=empate +1
	i=i+1
print(len(barsanulfo))
if(b_vence>e_vence):
	print("barsanulfo")
elif (e_vence>b_vence):
	print("eusapia")
else:
	print('empate')

	

-- EXECUTION TIME:
0.405839
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
eusapia
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
empate
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
barsanulfo
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 15:51:19) 
-- CODE:
from numpy import *
eusapia=array(eval(input('digite as jogadas de Eurapia:  ')))
barsanulfo=array(eval(input('digite as jogadas de Barsanulfo:  ')))
i=0
b_vence=0
e_vence=0
empate=0
while(i < len(eusapia)):
	if (barsanulfo[i]==11 and eusapia[i]==33) or (barsanulfo[i]==22 and eusapia[i]==11) or (barsanulfo[i]==33 and eusapia[i]==22):
		b_vence= b_vence +1
		
	elif (barsanulfo[i]==11 and eusapia[i]==22) or (barsanulfo[i]==22 and eusapia[i]==33) or (barsanulfo[i]==33 and eusapia[i]==11):
		e_vence= e_vence +1
	else:
		empate=empate +1
	i=i+1
print(len(barsanulfo))
if(b_vence>e_vence):
	print("BARSANULFO")
elif (e_vence>b_vence):
	print("EUSAPIA")
else:
	print('EMPATE')

	

-- EXECUTION TIME:
0.381923
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
